test/tests/AmbiguousMatch.frost
class AmbiguousMatch {
    @class
    method m(o:Object, s:String) {
    }

    @class
    method m(s:String, o:Object) {
    }

    @class
    method main() {
        m("Hello", "Goodbye")
    }
}